--- a/prototipob.html
+++ b/prototipob.html
@@ -48,7 +48,7 @@
     <main>
         <div id="container">
             <h2>Buscador de facturas electricas en CABA 2023</h2>
-            <p>En el siguiente buscador podrás conocer los consumos registrados por un medidor de CUALQUIER dependencia publica de GCBA.</p>
+            <p>En el siguiente buscador podrás conocer los consumos registrados por un medidor de CUALQUIER dependencia publica de GCBA (ACLARACIÓN: Si aparece "N/A" significa que esos datos no se encuentran en la base de datos).</p>
             
             <p>Solamente se necesita contactarse con el edificio publico en cuestion o solicitar una factura electrica con el fin de identificar EL o LOS medidores del edificio.</p>
             <p>Luego, se coloca el N° de Medidor en el buscador y se da click en "Buscar". Una vez terminado, se da click en "Limpiar" y deja todo listo para la siguiente busqueda.</p>
