--- a/simulador.html
+++ b/simulador.html
@@ -18,11 +18,15 @@
 </head>
 <body>
     <header>
-        <h1>Gobierno Ejemplar 2024</h1>
+        <h1>Gerencia Operativa de Gestión Energética (GOGE)</h1>
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Volver atrás</a></li>
+            <li><a href="index.html">GOGE</a></li>
+            <li><a href="tablero.html">Gobierno Ejemplar</a></li>
+            <li><a href="prototipob.html">Buscador de Facturas</a></li>
+            <li><a href="simulador.html">Simulador de Consumo</a></li>
+            <li><a href="https://buenosaires.gob.ar/agenciaambiental/energia/centro-digital-de-recursos" target="_blank">Link CDR</a></li>
         </ul>
     </nav>
     <main>
