--- a/prototipob.html
+++ b/prototipob.html
@@ -38,17 +38,21 @@
 </head>
 <body>
     <header>
-        <h1>Gobierno Ejemplar 2024</h1>
+        <h1>Gerencia Operativa de Gestión Energética (GOGE)</h1>
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Volver atrás</a></li>
+            <li><a href="index.html">GOGE</a></li>
+            <li><a href="tablero.html">Gobierno Ejemplar</a></li>
+            <li><a href="prototipob.html">Buscador de Facturas</a></li>
+            <li><a href="simulador.html">Simulador de Consumo</a></li>
+            <li><a href="https://buenosaires.gob.ar/agenciaambiental/energia/centro-digital-de-recursos" target="_blank">Link CDR</a></li>
         </ul>
     </nav>
     <main>
         <div id="container">
             <h2>Buscador de facturas electricas en CABA 2023</h2>
-            <p>En el siguiente buscador podrás conocer los consumos registrados por un medidor de CUALQUIER dependencia publica de GCBA (ACLARACIÓN: Si aparece "N/A" significa que esos datos no se encuentran en la base de datos).</p>
+            <p>En el siguiente buscador podrás conocer los consumos registrados por un medidor de CUALQUIER dependencia publica de GCBA.</p>
             
             <p>Solamente se necesita contactarse con el edificio publico en cuestion o solicitar una factura electrica con el fin de identificar EL o LOS medidores del edificio.</p>
             <p>Luego, se coloca el N° de Medidor en el buscador y se da click en "Buscar". Una vez terminado, se da click en "Limpiar" y deja todo listo para la siguiente busqueda.</p>
